<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="second_screen">Second Screen</string>
    <string name="choose">Choose a User</string>
    <string name="firstLast_name">Firstname Lastname</string>
    <string name="email">Email</string>
    <string name="third_screen">Third Screen</string>
</resources>