<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.FirstScreenActivity">

    <ImageView
        android:id="@+id/iv_addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_photo" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="Name"
        android:background="@drawable/input_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_addPhoto" />

    <EditText
        android:id="@+id/et_palindrome"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:hint="@string/palindrome"
        android:background="@drawable/input_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:autofillHints="Palindrome"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/check"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_palindrome"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_check"/>

</androidx.constraintlayout.widget.ConstraintLayout>